--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movies-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://filimongeorge.github.io/movies-app",
+  "homepage": "https://filimongeorge.github.io/movies-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
